homework, html, css and jsx

--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -10,6 +10,7 @@
     <h1>Sergio Felipe Mendoza Poveda</h1>
     <p>Customer Representative Summary: More than a year and a half of experience as a customer representative. Familiar with
     major customer service software, conflict resolution and possess positive attitude</p>
+    <div><img src="Sergio.jpg" alt=""></div>
     <p>Experience
     Customer Representative - Sitel Aug 2020 - Present
     • Handle more than 300 calls weekly
@@ -41,7 +42,9 @@ Bogota, DC 2022
 • Time Management
 • Being able to work under pressure
 </p>
+<div>
+    <p>Quisiera estufdiar esta carrera porque quiero aprender a progrmar y dieenar paginas web y aplicativos</p>
+</div>
 
-<p>Quisiera estufdiar esta carrera porque quiero aprender a progrmar y dieenar paginas web y aplicativos</p>
 </body>
 </html>
